--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,25 +6,25 @@ services:
     image: xavgar9/employee-management-frontend
     ports:
       - 3000:3000
-    depends_on:
-      - backend
-  backend:
-    container_name: backend
-    image: xavgar9/employee-management-backend
-    ports:
-      - 8080:8080
-    depends_on:
-      - db
-    environment:
-      - MYSQL_ROOT_USER=root
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_ROOT_DB=employeemanagement
-  db:
-    container_name: db
-    image: mysql:latest
-    ports:
-      - "3306:3306"
-    environment:
-      - MYSQL_ROOT_USER=root
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_ROOT_DB=employeemanagement
+  #   depends_on:
+  #     - backend
+  # backend:
+  #   container_name: backend
+  #   image: xavgar9/employee-management-backend
+  #   ports:
+  #     - 8080:8080
+  #   depends_on:
+  #     - db
+  #   environment:
+  #     - MYSQL_ROOT_USER=root
+  #     - MYSQL_ROOT_PASSWORD=root
+  #     - MYSQL_ROOT_DB=employeemanagement
+  # db:
+  #   container_name: db
+  #   image: mysql:latest
+  #   ports:
+  #     - "3306:3306"
+  #   environment:
+  #     - MYSQL_ROOT_USER=root
+  #     - MYSQL_ROOT_PASSWORD=root
+  #     - MYSQL_ROOT_DB=employeemanagement
