--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,3 +30,5 @@ services:
       - MYSQL_ROOT_USER=root
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_ROOT_DB=employeemanagement
+    volumes:
+      - ./scripts:/docker-entrypoint-initdb.d
